# async-context-engine

./: .gitignore  README.md  graph.py  pyproject.toml  runner.py  scout_manager.py  state.py
async_context_engine/: __init__.py  dispatch.py  helpers.py  models.py  poller.py  state.py
async_context_engine/store/: __init__.py  file.py  memory.py
docs/: guide.md
docs/plans/: 2026-03-01-async-context-engine-library-design.md
examples/basic/: graph.py  requirements.txt  runner.py  scout_manager.py  state.py
examples/basic/tests/: test_graph.py  test_scout_manager.py  test_state.py
examples/multi-agent/: graph.py
examples/sub-agents/: graph.py
tests/: test_async_state.py  test_dispatch.py  test_helpers.py  test_models.py  test_poller.py  test_public_api.py  test_scout_manager.py  test_state.py  test_store_abc.py  test_store_file.py  test_store_memory.py
