[project]
name = "async-context-engine"
version = "4.0.0"
description = "Plug-and-play async context re-entry for LangGraph agents"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Sagar Mainkar" },
]
dependencies = [
    "langgraph>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]
examples = [
    "langchain-ollama>=1.0",
    "python-dotenv>=1.0",
    "rich>=14.0",
]

[project.urls]
Repository = "https://github.com/sagarmainkar/async-context-engine"

[tool.setuptools.packages.find]
include = ["async_context_engine*"]
